--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -135,3 +135,16 @@ body {
 			"calt" 1;
 	}
 }
+
+::-webkit-scrollbar {
+	height: 4px;
+	width: 4px;
+}
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+::-webkit-scrollbar-thumb {
+	background-color: rgba(155, 155, 155, 0.5);
+	border-radius: 20px;
+	border: transparent;
+}
